<resources>
    <string name="app_name">Kratos</string>
    <string name="new_user">New User</string>
    <string name="existing_user">Existing User</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>
    <string name="Email_id">Email ID</string>
    <string name="title_activity_qr_code">QrCodeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="validate_participant">Validate Participant</string>
    <string name="thanks">Thanks For Participating</string>
    <string name="list_of_events">List of Events</string>
    <string name="live_trivia_in_general_session">Live Trivia in General Session</string>
    <string name="digital_trade_show_passport">Digital Trade Show Passport</string>
    <string name="scavenger_hunt">Scavenger Hunt</string>
    <string name="name_wheel">Name Wheel</string>
    <string name="event_scanner">Event Scanner</string>
    <string name="event_manager">Event Manager</string>
    <string name="players_list">Players List</string>
    <string name="event_1">Event 1</string>
    <string name="marvel_game">Marvel Game</string>
    <string name="mid_city_madness">MidCity Madness</string>
    <string name="round_one">Round One</string>
    <string name="round_two">Round Two</string>
    <string name="round_three">Round Three</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="image">image</string>
    <string name="welcome_to_kratos">Welcome To Kratos</string>
    <string name="rounds_check_list">Rounds Check List</string>
</resources>