<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventGameActivity">

    <TextView
        android:id="@+id/questionOne"
        android:layout_width="332dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:text="@string/list_of_events"
        android:textColor="#0f5e9c"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgChoose"
        android:layout_width="355dp"
        android:layout_height="243dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionOne">

        <RadioButton
            android:id="@+id/rbChoose1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/live_trivia_in_general_session"
            android:textColor="#0f5e9c"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbChoose2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/digital_trade_show_passport"
            android:textColor="#0f5e9c"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbChoose3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/scavenger_hunt"
            android:textColor="#0f5e9c"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbChoose4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/name_wheel"
            android:textColor="#0f5e9c"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbChoose5"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/mid_city_madness"
            android:textColor="#0f5e9c"
            android:textSize="18sp" />


    </RadioGroup>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:text="@string/submit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>